# prompt-analyzer

./: .env.example  .gitignore  CONTRIBUTING.md  DEBUGGING.md  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  run-backend-tests.sh  setup.sh  verify-startup.sh
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  check_env.py  main.py  pyproject.toml  requirements.txt  test_backend.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
